--- a/examples/api/public/global.css
+++ b/examples/api/public/global.css
@@ -5,7 +5,7 @@
 }
 
 body {
-  background: #18191a;
+  background: rgb(24, 25, 26, 0.8);
 }
 
 .noselect {
@@ -43,7 +43,7 @@ body {
   height:100%;
   max-height: 100%;
   margin-top: 1em;
-  background: rgb(36, 37, 38);
+  background: rgb(36, 37, 38, 0.8);
   color: #f0f4f5;
   border: solid 1px rgba(255, 255, 255, 0.055);
   box-shadow: 0 1px 5px 0 rgb(0 0 0 / 20%);
@@ -55,8 +55,9 @@ body {
 }
 
 input,
-select, textarea {
-  background: rgb(53, 53, 53);
+select,
+textarea {
+  background: rgb(53, 53, 53, 0.9);
   color: #fff;
   font-family: system-ui, sans-serif;
   border: none !important;
@@ -142,7 +143,7 @@ button:active {
 }
 
 .content {
-  background: rgb(36, 37, 38);
+  background: rgb(36, 37, 38, 0.5);
   color: #f0f4f5;
   padding: 20px;
   width: 100%;
