--- a/tooling/bundler/src/bundle/windows/templates/update-task.xml
+++ b/tooling/bundler/src/bundle/windows/templates/update-task.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-16"?>
 <Task version="1.2" xmlns="http://schemas.microsoft.com/windows/2004/02/mit/task">
   <RegistrationInfo>
-    <URI>\Update {{{product_name}} - Skip UAC</URI>
+    <URI>\Update {{{product_name}}} - Skip UAC</URI>
   </RegistrationInfo>
   <Triggers />
   <Principals>
