Successful with hard-coded install path

--- a/tooling/bundler/src/bundle/windows/templates/main.wxs
+++ b/tooling/bundler/src/bundle/windows/templates/main.wxs
@@ -220,6 +220,7 @@
             Id="CreateUpdateTask"
             Return="check"
             Directory="INSTALLDIR"
+            Execute="commit"
             Impersonate="yes"
             ExeCommand="powershell .\install-task.ps1" />
         <InstallExecuteSequence>
