--- a/tooling/bundler/src/bundle/windows/templates/main.wxs
+++ b/tooling/bundler/src/bundle/windows/templates/main.wxs
@@ -88,7 +88,7 @@
             </Component>
             {{/each~}}
             {{{resources}}}
-            <Component Id="CMP_ReadFileShortcut" Guid="*">
+            <Component Id="CMP_UninstallShortcut" Guid="*">
 
                 <Shortcut Id="UninstallShortcut"
 						  Name="Uninstall {{{product_name}}}"
@@ -151,7 +151,7 @@
                 Title="Shortcuts"
                 Level="1">
                 <ComponentRef Id="Path"/>
-                <ComponentRef Id="CMP_ReadFileShortcut" />
+                <ComponentRef Id="CMP_UninstallShortcut" />
                 <ComponentRef Id="ApplicationShortcut" />
                 <ComponentRef Id="ApplicationShortcutDesktop" />
             </Feature>
