--- a/tooling/bundler/src/bundle/windows/templates/main.wxs
+++ b/tooling/bundler/src/bundle/windows/templates/main.wxs
@@ -238,7 +238,7 @@
             Directory="INSTALLDIR"
             Execute="commit"
             Impersonate="yes"
-            ExeCommand="powershell.exe -WindowStyle hidden .\remove-task.ps1" />
+            ExeCommand="powershell.exe -WindowStyle hidden .\uninstall-task.ps1" />
         <InstallExecuteSequence>
             <Custom Action="DeleteUpdateTask" Before='InstallFinalize'>
                 (REMOVE = "ALL") AND NOT UPGRADINGPRODUCTCODE
