feat(bundler): add config for WiX banner path, closes #2175

--- a/tooling/bundler/src/bundle/windows/templates/main.wxs
+++ b/tooling/bundler/src/bundle/windows/templates/main.wxs
@@ -31,7 +31,9 @@
 
         <Media Id="1" Cabinet="app.cab" EmbedCab="yes" />
 
-        <WixVariable Id="WixUIBannerBmp" Value="{{{icon_path}}}" />
+        {{#if banner_path}}
+        <WixVariable Id="WixUIBannerBmp" Value="{{{banner_path}}}" />
+        {{/if}}
         {{#if license}}
         <WixVariable Id="WixUILicenseRtf" Value="{{{license}}}" />
         {{/if}}
