chore: rename `disallow_downgrades` to `allow_downgrades`

--- a/tooling/bundler/src/bundle/windows/templates/main.wxs
+++ b/tooling/bundler/src/bundle/windows/templates/main.wxs
@@ -25,10 +25,10 @@
                  InstallScope="perMachine"
                  SummaryCodepage="!(loc.TauriCodepage)"/>
 
-        {{#if disallow_downgrades}}
-            <MajorUpgrade DowngradeErrorMessage="!(loc.DowngradeErrorMessage)" AllowSameVersionUpgrades="yes" />
-        {{else}}
+        {{#if allow_downgrades}}
             <MajorUpgrade AllowDowngrades="yes" />
+        {{else}}
+            <MajorUpgrade DowngradeErrorMessage="!(loc.DowngradeErrorMessage)" AllowSameVersionUpgrades="yes" />
         {{/if}}
 
         <Media Id="1" Cabinet="app.cab" EmbedCab="yes" />
