--- a/tooling/bundler/src/bundle/windows/templates/main.wxs
+++ b/tooling/bundler/src/bundle/windows/templates/main.wxs
@@ -25,8 +25,11 @@
                  InstallScope="perMachine"
                  SummaryCodepage="!(loc.TauriCodepage)"/>
 
-        <MajorUpgrade DowngradeErrorMessage="!(loc.DowngradeErrorMessage)"
-          AllowSameVersionUpgrades="yes" />
+        {{#if allow_downgrades}}
+            <MajorUpgrade AllowDowngrades="yes" />
+        {{else}}
+            <MajorUpgrade DowngradeErrorMessage="!(loc.DowngradeErrorMessage)" AllowSameVersionUpgrades="yes" />
+        {{/if}}
 
         <Media Id="1" Cabinet="app.cab" EmbedCab="yes" />
 
