fix(bundler): prevent removal of `pin to taskbar` on Windows

--- a/tooling/bundler/src/bundle/windows/templates/main.wxs
+++ b/tooling/bundler/src/bundle/windows/templates/main.wxs
@@ -30,7 +30,7 @@
         <Property Id="REINSTALLMODE" Value="dmus" />
 
         {{#if allow_downgrades}}
-            <MajorUpgrade AllowDowngrades="yes" Schedule="afterInstallInitialize" />
+            <MajorUpgrade AllowDowngrades="yes" Schedule="afterInstallExecute" />
         {{else}}
             <MajorUpgrade DowngradeErrorMessage="!(loc.DowngradeErrorMessage)" AllowSameVersionUpgrades="yes" />
         {{/if}}
